--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,13 @@
 /* || GENERAL STLES */
 body {
-    display: flex;
+    
+}
+
+h2 {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 1.6em;
+    padding-bottom: 30px;
+
 }
 
 h3 {
@@ -13,12 +20,24 @@ h3 {
 }
 
 .button {
-    background-color: aqua;
+    background-color: rgb(0, 255, 98);
     padding: 10px;
+    border: none;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.292);
+    font-size: 1.6em;
+    font-style: oblique;
+    
 }
 
-.carousel {
-    display: flex;
+.button:hover {
+    transform: scale(1.1);
+    transition: transform 330ms ease-in-out;
+}
+
+#carousel {
+    display:none;
+    margin: 20px;
 }
 
 .cards {
